# final_project_mccarthy

./: pyproject.toml
senator_fec_data/: CONTRIBUTING.rst  Extended_Tutorial.ipynb  Mitch McConnell FEC Data  README.md  Rand Paul FEC Data  pyproject.toml
senator_fec_data/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
senator_fec_data/docs/source/: modules.rst  senator_fec_data.rst
senator_fec_data/senator_fec_data/: senator_fec_data.py
senator_fec_data/tests/: test_senator_fec_data.py
src/mccarthy_final.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_mccarthy_final.py
