[tool.poetry]
name = "senator_fec_data"
version = "0.1.0"
description = "Python package to obtain the FEC data of current US senators."
authors = ["Bryn <bam2231@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
requests = "^2.25.0"
pandas = "^1.1.5"
os = "^0.0.1"
json = "^2.0.9"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
