[tool.poetry]
name = "senator_fec_data"
version = "0.1.0"
description = "Python package to obtain the FEC data of current US senators."
authors = ["Bryn <bam2231@columbia.edu>"]
license = "MIT"
readme = "README.md"
documentation = 'https://senator-fec-data.readthedocs.io/'
homepage = "https://github.com/QMSS-G5072-2020/senator_fec_data"
repository = "https://github.com/QMSS-G5072-2020/senator_fec_data"

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
requests = "^2.25.0"
pandas = "^1.1.5"
matplotlib = "^3.3.3"


[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

